# data_extraction_engine

./: README.md  data_extraction_app.db  extracted_data.db  pyproject.toml
data_extraction_engine/: new_code.py
data_extraction_engine/app/: main.py
data_extraction_engine/models/: database.py  models.py  query_params.py
data_extraction_engine/utils/: pdf_processor.py
