[tool.poetry]
name = "data-extraction-engine"
version = "0.1.0"
description = "\"A data extraction engine for PDFs\""
authors = ["Moses Sechere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unicorn = "^2.0.1.post1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pymupdf = "^1.24.7"
opencv-python-headless = "^4.10.0.84"
pytesseract = "^0.3.10"
sqlalchemy = "^2.0.31"
pysqlite3 = "^0.5.3"
pypdf2 = "^2.0"
pdfminer = "^20191125"
pdfminer-six = "^20231228"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
